--- a/trunk/Pubs/src/presentacion/Pubs.form
+++ b/trunk/Pubs/src/presentacion/Pubs.form
@@ -10,6 +10,11 @@
             <Property name="text" type="java.lang.String" value="Cat&#xe1;logos"/>
           </Properties>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenu1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Procesos"/>
+          </Properties>
+        </Menu>
         <Menu class="javax.swing.JMenu" name="helpMenu">
           <Properties>
             <Property name="mnemonic" type="int" value="104"/>
